--- a/src/components/firstpages/firstpages.css
+++ b/src/components/firstpages/firstpages.css
@@ -7,13 +7,38 @@
     display: flex;
     align-items: center;
     justify-content: center;
-}
-.image {
-    background-image: url(./pdpstyler.png);
-    width: 400px;
-    height: 400px;
+    background-image: url(./SL_101619_24150_55.jpg);
     background-size: cover; /* Ajuster la taille de l'image pour remplir le conteneur */
     background-position: center;
+}
+.contenu{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    
+}
+.image {
+    height: 75%;
+    width: 60%;
     -webkit-filter: grayscale(100%);
 	filter: grayscale(100%);
+}
+.image:hover {
+    -webkit-filter: grayscale(0%);
+	filter: grayscale(0%);
+}
+.text{
+    font-family: 'Raleway',
+    sans-serif;
+    color:#fff;
+    text-align: right;
+    margin-right: 3em;
+    line-height: 1.8;   
+}
+.intro{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
