--- a/src/components/firstpages/firstpages.css
+++ b/src/components/firstpages/firstpages.css
@@ -40,6 +40,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    width: calc(100% - 60%);
     padding-left: 5%;
 
 }
