--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,20 +1,21 @@
 .App-link {
     font-family: Arial, Helvetica, sans-serif;
     font-size: larger;
-    color: #61dafb;
+    color: #030405;
     text-decoration: none;
+    padding-right: 2rem;
 }
 
 .App-link:hover {
-    color: #02141a; /* Added semicolon */
+    color: #ffffff; /* Added semicolon */
     text-decoration: none;
 }
 
 .nav{
-    background: #fff1c1;
-    height: 5vh;
+    background: #7070708e;
+    height: 10vh;
     width: 100%;
     display: flex;
     align-items: center;
-    justify-content: end;
+    justify-content: flex-end;
 }
