--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,8 @@ body, html {
     height: 100%;
     overflow: auto; /* Assurez-vous que le défilement est activé */
     overflow-x: hidden;
+    min-height: 200vh; /* Double la hauteur de la fenêtre pour permettre le défilement */ 
+    background: #252230;
 }
 .top{
     position: relative;
