--- a/src/pages/acceuil/home.css
+++ b/src/pages/acceuil/home.css
@@ -1,10 +1,35 @@
 .home{
     height: 100vh;
     width: 100vw;
+    background: #252230;
 }
-.contact{
+.form{
     display: flex;
     align-items: center;
     flex-direction: column;
     width: 50%;
+}
+.box{
+    background: #000;
+    width: 50%;
+    height: 50%;
+}
+.container-box{
+    width: 50%;
+    display: flex;
+    
+}
+.contact-left{
+    width: 50%;
+}
+.contact{
+    display: flex;
+    flex-direction: row;
+    width: 100vw;
+}
+.section{
+    display: flex;
+    flex-direction: column;
+    width: 100vw;
+
 }
