--- a/src/pages/acceuil/home.css
+++ b/src/pages/acceuil/home.css
@@ -1,35 +1,90 @@
 .home{
+    overflow-y: hidden;
     height: 100vh;
     width: 100vw;
     background: #252230;
-}
-.form{
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    width: 50%;
-}
-.box{
-    background: #000;
-    width: 50%;
-    height: 50%;
-}
-.container-box{
-    width: 50%;
-    display: flex;
-    
-}
-.contact-left{
-    width: 50%;
-}
-.contact{
-    display: flex;
-    flex-direction: row;
-    width: 100vw;
-}
-.section{
+    color: #E5D4ED;
+    }
+    .section{
     display: flex;
     flex-direction: column;
     width: 100vw;
+        }.contact{
+        display: flex;
+        flex-direction: row;
+        width: 100vw;
+        height: 100vh;
+            }.contact-left{
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    width: 50%;
+                    height: 50%;
 
-}
+                }.form{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: end;
+    width: 65%;
+    height: 50%;
+                    }input{
+                        display: block;
+                        width: 100%;
+                        padding: 10px 12px;
+                        background-image: none;
+                        background-clip: padding-box;
+                        border: none;
+                        border-radius: 3px;
+                        transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
+                        background-color: #5941A9;
+                        color: inherit;
+                        height: auto;
+                    }
+                    .input-group{
+                        margin-bottom: 30px;
+                        padding-left: 30px;
+                        text-align: start;
+                        font-weight: 700;
+                    }
+                    .input-group1{
+                        width: calc(50% - 30px);
+                    }
+                    .input-group2{
+                        width: 100%;    
+                    }
+                    .input-group3{
+                        width: 100%;
+                    }
+                    .button{
+                        width: 100%;
+                        display: flex;
+                        justify-content: center;
+                        }.submit{
+                            background-color: #6D72C3;
+                            border-radius: 10px;
+                            border-style: none;
+                            text-transform: uppercase;
+                            width: 100%;
+                            letter-spacing: 2px;
+                            font-weight: 700;
+                            padding: 14px 0 15px;
+                        }
+            .container-box{
+                    width: 50%;
+                    height: 50%;
+                    display: flex;
+                    flex-wrap: wrap;
+                }.box{
+                    background: rgb(89, 65, 169);
+                    width: 30%;
+                    height: 50%;
+                    margin: 2rem;
+                    border-radius: 10px;
+                }
+
+
+
+
+
+
+
