--- a/src/pages/acceuil/home.css
+++ b/src/pages/acceuil/home.css
@@ -6,31 +6,38 @@
     color: #E5D4ED;
     }
     .section{
-    display: flex;
-    flex-direction: column;
-    width: 100vw;
-        }.contact{
-        display: flex;
-        flex-direction: row;
-        width: 100vw;
-        height: 100vh;
+            display: flex;
+            flex-direction: column;
+            width: 100vw;
+        }.title2{
+            width: 100%;
+            text-align: center;
+            font-size: xx-large;
+            border-bottom: 3px solid black;
+            border-width: 50%;
+        }
+        .contact{
+                display: flex;
+                flex-direction: row;
+                width: 100vw;
+                height: 100vh;
             }.contact-left{
                     display: flex;
                     align-items: center;
                     justify-content: center;
                     width: 50%;
-                    height: 50%;
+                    height: 31%;
 
                 }.form{
-    display: flex;
-    flex-wrap: wrap;
-    align-items: end;
-    width: 65%;
-    height: 50%;
+                    display: flex;
+                    flex-wrap: wrap;
+                    align-items: end;
+                    width: 65%;
+                    height: 50%;
                     }input{
                         display: block;
                         width: 100%;
-                        padding: 10px 12px;
+                        padding: 21px 6px;
                         background-image: none;
                         background-clip: padding-box;
                         border: none;
@@ -39,6 +46,10 @@
                         background-color: #5941A9;
                         color: inherit;
                         height: auto;
+                        font-size: large;
+                    }
+                    .label{
+                        font-size: x-large;
                     }
                     .input-group{
                         margin-bottom: 30px;
@@ -66,8 +77,12 @@
                             text-transform: uppercase;
                             width: 100%;
                             letter-spacing: 2px;
-                            font-weight: 700;
+                            font-size: large;
+                            font-weight: bolder;
                             padding: 14px 0 15px;
+                        }
+                        .submit:active{
+                            background-color: #5941A9;
                         }
             .container-box{
                     width: 50%;
@@ -75,11 +90,20 @@
                     display: flex;
                     flex-wrap: wrap;
                 }.box{
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    justify-content: center;
                     background: rgb(89, 65, 169);
                     width: 30%;
                     height: 50%;
                     margin: 2rem;
                     border-radius: 10px;
+                }.logo{
+                    width: 55%;
+                }.link{
+                    display: flex;
+                    justify-content: center;
                 }
 
 
