--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,8 @@ body, html {
     margin: 0;
     padding: 0;
     height: 100%;
-    overflow: auto; /* Assurez-vous que le défilement est activé */
-    overflow-x: hidden;
     background: #252230;
+    overflow: hidden;
 }
 .top{
     position: relative;
